Added Banner Ads page and formatted code

--- a/app/header/view.html
+++ b/app/header/view.html
@@ -4,14 +4,13 @@
     <div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
       <div class="left_header">
         <div class="img_outer_in_head pull-left" style="display:inline-block;">
-          <img width="75" height="75" src="uploads/2014/09/banner_12-150x150.png" class="attachment-75x80 size-75x80 wp-post-image" alt="banner_1" srcset="uploads/2014/09/banner_12-150x150.png 150w, uploads/2014/09/banner_12-44x44.png 44w" sizes="(max-width: 75px) 100vw, 75px"/>
+          <img width="75" height="75" src="uploads/2014/09/banner_12-150x150.png" class="attachment-75x80 size-75x80 wp-post-image" alt="banner_1" srcset="uploads/2014/09/banner_12-150x150.png 150w, uploads/2014/09/banner_12-44x44.png 44w" sizes="(max-width: 75px) 100vw, 75px" />
         </div>
         <div class="text_style_new">
           For assistance in finding treatment,
         </div>
         <div class="text_style_special">
-          <img src="themes/addiction/images/phone.png" class="pull-left"/>
-          Call 949-444-9123
+          <img src="themes/addiction/images/phone.png" class="pull-left" /> Call 949-444-9123
         </div>
         <div class="text_style_new">
           To speak to a live counselor
@@ -29,7 +28,9 @@
 <div class="navbar navbar-default header_bg_texture" role="navigation">
   <div class="container width_adjust_header ">
     <div class="navbar-header  padding_left_new ">
-      <a class="hdr_logo_div" href="http://www.addictionnetwork.com"><img class="img-responsive" src="themes/addiction/images/addiction_logo.png"/></a>
+      <a class="hdr_logo_div" href="http://www.addictionnetwork.com">
+        <img class="img-responsive" src="themes/addiction/images/addiction_logo.png" />
+      </a>
       <button type="button" class="navbar-toggle toggle_button" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -47,7 +48,7 @@
       <ul class="social_ul">
         <li ng-repeat="socialLink in $ctrl.socialLinks">
           <a ng-href="{{ socialLink.href }}" target="_blank">
-            <img ng-src="{{ socialLink.img }}"/>
+            <img ng-src="{{ socialLink.img }}" />
           </a>
         </li>
       </ul>
@@ -55,7 +56,7 @@
       <div class="nav_align ">
         <ul class="nav navbar-nav new_class_for_sub_menu header_main_menu fonnt">
           <li ng-repeat="link in $ctrl.internalLinks">
-            <a class='comm' ui-sref="{{ link.uiSref }}">{{ link.name }}</a>
+            <a class="comm" ui-sref="{{ link.uiSref }}">{{ link.name }}</a>
           </li>
         </ul>
       </div>
