--- a/app/bannerAds/add/main/view.html
+++ b/app/bannerAds/add/main/view.html
@@ -1,7 +1,7 @@
 <div class="col-md-8 col-sm-8 col-xs-12 col-lg-9">
     <div class="heading_main_div">
         <h2>
-            <label>Add Banner Ad </label>
+            <label>Add Banner Ads </label>
         </h2>
 
     </div>
