--- a/app/myTreatmentCenters/main/view.html
+++ b/app/myTreatmentCenters/main/view.html
@@ -15,7 +15,7 @@
 
     <!-- Add treatment center button -->
     <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 pull-right ">
-      <a href="#/add-treatment-center/">
+      <a ui-sref="addTreatmentCenter">
         <div class="col-md-12 col-xs-12 col-sm-12 padding_0">
           <span class="pull-right modal_btn btn btn-primary margin_bottom_15_add text-right">
             Add Treatment Center
