--- a/app/index.html
+++ b/app/index.html
@@ -481,7 +481,7 @@
         var n = d.createElement(s),
           e = document.getElementsByTagName(s)[0];
         n.id = i;
-        n.src = '//js.hs-analytics.net/analytics/' + (Math.ceil(new Date() / r) * r) + '/2502193.js";
+        n.src = '//js.hs-analytics.net/analytics/' + (Math.ceil(new Date() / r) * r) + '/2502193.js';
         e.parentNode.insertBefore(n, e);
       })(document, "script", "hs-analytics", 300000);
     </script>
