--- a/app/sponsorHome/view.html
+++ b/app/sponsorHome/view.html
@@ -13,13 +13,13 @@
               <li ng-repeat="listing in $ctrl.entry.listings" class="width-100">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                   <div class="sponsor_img">
-                    <a ng-href="{{ listing.center_web_link }}" class="thumbnail" target="blank">
+                    <a ng-href="{{ listing.center_web_link }}" class="thumbnail" target="_blank">
                       <img ng-src="{{ listing.listing_image }}" alt="" />
                     </a>
                   </div>
                   <div class="sponsor_img" style="width:65%;">
                     <h3>
-                      <a ng-href="{{listing.center_web_link}}" target="blank">
+                      <a ng-href="{{ listing.center_web_link }}" target="_blank">
                         {{ listing.center_name }}
                       </a>
                     </h3>
