completed accountSetting and changePassword features

--- a/app/myProfile/view.html
+++ b/app/myProfile/view.html
@@ -5,6 +5,7 @@
     <profile-nav-section profile-pic="$ctrl.profile.profile_pic"></profile-nav-section>
 
     <!-- Right Section  -->
-    <profile-main profile="$ctrl.profile"></profile-main>
+    <ui-view></ui-view>
+    <!-- <profile-main profile="$ctrl.profile"></profile-main> -->
   </div>
 </div>
