--- a/app/myProfile/editTreatmentCenter/view.html
+++ b/app/myProfile/editTreatmentCenter/view.html
@@ -9,8 +9,7 @@
       <div class="col-md-12 col-sm-12 col-xs-12">
         <a href="javascript:history.go(-1);">
           <span class="modal_btn btn btn-primary margin_bottom_15_add pull-right  text-right">
-            <i class="glyphicon glyphicon-hand-left"></i>
-            Back
+            <i class="glyphicon glyphicon-hand-left"></i> Back
           </span>
         </a>
       </div>
@@ -39,7 +38,7 @@
           <label for="tname">Center Name:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
-          <input ng-model="$ctrl.center_name" type="text" class="form-control required" placeholder="Treatment Center Name"/>
+          <input ng-model="$ctrl.center_name" type="text" class="form-control required" placeholder="Treatment Center Name" />
         </div>
       </div>
 
@@ -49,7 +48,7 @@
           <label for="web_link">Website Link:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
-          <input ng-model="$ctrl.center_web_link" type="text" class="form-control required url" placeholder="http://www.google.com" value=""/>
+          <input ng-model="$ctrl.center_web_link" type="text" class="form-control required url" placeholder="http://www.google.com" value="" />
         </div>
       </div>
 
@@ -59,8 +58,8 @@
           <label for="addr">Street Address:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
-          <input ng-model="$ctrl.address_line_1" type="text" class="form-control required" placeholder=""/>
-          <input type="hidden" name="centerapprove" value="0"/>
+          <input ng-model="$ctrl.address_line_1" type="text" class="form-control required" placeholder="" />
+          <input type="hidden" name="centerapprove" value="0" />
         </div>
       </div>
 
@@ -70,7 +69,7 @@
           <label for="city">City:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
-          <input ng-model="$ctrl.city" type="text" class="form-control required" placeholder="center city" value=""/>
+          <input ng-model="$ctrl.city" type="text" class="form-control required" placeholder="center city" value="" />
         </div>
       </div>
 
@@ -90,7 +89,7 @@
           <label for="zip">Zipcode:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
-          <input ng-model="$ctrl.pincode" type="text" name="center_zip" class="form-control required" number="true" maxlength="5" minlength="5" id="zip" placeholder="14100" value=""/>
+          <input ng-model="$ctrl.pincode" type="text" name="center_zip" class="form-control required" number="true" maxlength="5" minlength="5" id="zip" placeholder="14100" value="" />
         </div>
       </div>
 
@@ -100,7 +99,7 @@
           <label for="phone">Phone:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
-          <input ng-model="$ctrl.phone" type="text" name="center_phone" class="form-control required" id="phone" number="true" maxlength="10" minlength="10" placeholder="09855438504" value=""/>
+          <input ng-model="$ctrl.phone" type="text" name="center_phone" class="form-control required" id="phone" number="true" maxlength="10" minlength="10" placeholder="09855438504" value="" />
         </div>
       </div>
 
@@ -132,7 +131,7 @@
         <div class="col-md-8 col-sm-8 col-xs-12">
           <div class="">
             <a href="javascript:void(0)">
-              <input file-model="$ctrl.listing_image" type="file" name="center_image" id="img_upload" class="center_image"/>
+              <input file-model="$ctrl.listing_image" type="file" name="center_image" id="img_upload" class="center_image" />
             </a>
             <span style="float:left;">Please upload an image with exact size of 308*180 KB.
             </span>
@@ -198,22 +197,24 @@
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
           <div id="galler_image_wrap">
-            <input file-model="$ctrl.image_data" type="file" multiple name="treatment_center_gallery_images[]" id="galler_image" class="span2 text_file multi center_image" value=""/>
+            <input file-model="$ctrl.image_data" type="file" multiple name="treatment_center_gallery_images[]" id="galler_image" class="span2 text_file multi center_image" value="" />
             <span id="galler_image_wrap_labels"></span>
           </div>
         </div>
       </div>
-      <input type="hidden" name="slug" value=""/>
+      <input type="hidden" name="slug" value="" />
       <div class="text-left col-md-8 col-sm-12 col-xs-8 col-lg-8 col-md-offset-4 col-lg-offset-4 col-sm-offset-4 main_wrap_form_inner_sub">
-        <input class="btn btn-primary modal_btn pull-right btn_size" id="submit_profile" type="submit" value="Submit"/>
-        <input type="hidden" value="" name="current_pay" id="current_pay"/>
+        <input class="btn btn-primary modal_btn pull-right btn_size" id="submit_profile" type="submit" value="Submit" />
+        <input type="hidden" value="" name="current_pay" id="current_pay" />
 
       </div>
     </form>
     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
       <div class="company_adds margin_top_25">
         <div class="company_adds">
-          <a href="http://www.monarchshores.com"><img class="img-responsive" src="uploads/advertisement_images/medium/1428518360-MonarchAN.jpg"></a>
+          <a href="http://www.monarchshores.com">
+            <img class="img-responsive" src="uploads/advertisement_images/medium/1428518360-MonarchAN.jpg">
+          </a>
         </div>
       </div>
     </div>
