--- a/app/addListing/view.html
+++ b/app/addListing/view.html
@@ -10,7 +10,7 @@
             Contact Information:
           </h4>
           <div class="row">
-            <form name="addlistForm" enctype="multipart/form-data">
+            <form name="addlistForm" enctype="multipart/form-data" ng-controller="addListingCtrl as $ctrl">
               <input name="customertype" value="owner" type="hidden">
               <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -30,9 +30,11 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input placeholder="Password" id="password" name="password" class="form-control required" type="password" ng-model="$ctrl.password " required="true" >
+
+                    <input placeholder="Password" name="password" class="form-control required1" type="password" ng-model="$ctrl.password" ng-minlength="8" ng-pattern="/^(?=.*[0-9])(?=.*[!@#$%^&*()_+])([a-zA-Z0-9!@#$%^&*()]+)$/" required="true">
                     <span>{{$ctrl.pass_err}}</span>
-                    <p ng-show="addlistForm.password.$error.required" class="help-block">Required</p>
+                    <p ng-show="addlistForm.password.$invalid" class="help-block">Required, Password must contain 1 special, 1 numeric character and must be 8 digits</p>
+
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -52,7 +54,8 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input placeholder="First Name" id="first_name" name="user_first_name" class="form-control required" type="text" ng-model="$ctrl.first_name">
+                    <input placeholder="First Name" id="first_name" name="user_first_name" class="form-control required" type="text" required="true" ng-model="$ctrl.first_name">
+                    <p ng-show="addlistForm.user_first_name.$error.required" class="help-block">Required</p>
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -61,7 +64,8 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input placeholder="Last Name" id="last_name" name="user_last_name" class="form-control required" type="text" ng-model="$ctrl.last_name">
+                    <input placeholder="Last Name" id="last_name" name="user_last_name" class="form-control required" type="text" required="true" ng-model="$ctrl.last_name">
+                    <p ng-show="addlistForm.user_last_name.$error.required" class="help-block">Required</p>
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -70,7 +74,8 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input placeholder="Company" id="last_name" name="user_company" class="form-control required" type="text" ng-model="$ctrl.company">
+                    <input placeholder="Company" name="user_company" class="form-control required" type="text" required="true" ng-model="$ctrl.company">
+                    <p ng-show="addlistForm.user_company.$error.required" class="help-block">Required</p>
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -79,7 +84,7 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input placeholder="Phone" id="user_phone" name="user_phone" class="form-control required" type="text" ng-model="$ctrl.phone">
+                    <input placeholder="Phone" name="user_phone" class="form-control required" type="text" required="true" ng-minlength="10" ng-maxlength="10" ng-pattern="/^-?[0-9+]*$/" restrict="reject" maxlength="10" ng-model="$ctrl.phone">
                     <p ng-show="addlistForm.user_phone.$invalid" class="help-block">phone number must be 10 digits</p>
                   </div>
                 </div>
@@ -92,7 +97,7 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input placeholder="Treatment Center Name" id="tcname" name="center_name" class="form-control required" type="text" required="true" ng-model="$ctrl.center_name">
+                    <input placeholder="Treatment Center Name" name="center_name" class="form-control required" type="text" required="true" ng-model="$ctrl.center_name">
                     <p ng-show="addlistForm.center_name.$invalid" class="help-block">Required</p>
                   </div>
                 </div>
@@ -128,7 +133,7 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input id="website" name="heading2" class="form-control required" type="text" ng-model="$ctrl.heading_2" placeholder="Heading2">
+                    <input name="heading2" class="form-control required" type="text" ng-model="$ctrl.heading_2" placeholder="Heading2">
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -137,7 +142,7 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input id="website" name="heading3" class="form-control required" type="text" ng-model="$ctrl.heading_3" placeholder="Heading3">
+                    <input name="heading3" class="form-control required" type="text" ng-model="$ctrl.heading_3" placeholder="Heading3">
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -146,7 +151,7 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input id="website" name="heading4" class="form-control required" type="text" ng-model="$ctrl.heading_4" placeholder="Heading4">
+                    <input name="heading4" class="form-control required" type="text" ng-model="$ctrl.heading_4" placeholder="Heading4">
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -187,7 +192,7 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input id="website" name="address_line_1" class="form-control required" type="text" ng-model="$ctrl.address_line_1" placeholder="Address Line 1">
+                    <input name="address_line_1" class="form-control required" type="text" ng-model="$ctrl.address_line_1" placeholder="Address Line 1">
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -196,7 +201,7 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input id="website" name="address_line_2" class="form-control required" type="text" ng-model="$ctrl.address_line_2" placeholder="Address Line 2">
+                    <input name="address_line_2" class="form-control required" type="text" ng-model="$ctrl.address_line_2" placeholder="Address Line 2">
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -205,8 +210,8 @@
                     </label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input placeholder="Intake Email " id="intakeemail" name="intakeemail" class="form-control required" email="true" type="text" required="true" ng-model="$ctrl.intakeemail">
-                    <span>{{$ctrl.intakeemail_err}}</span>  
+                    <input placeholder="Intake Email " id="intakeemail" name="intakeemail" class="form-control required" email="true" type="text" ng-model="$ctrl.intakeemail"  required="true">
+                    <span>{{$ctrl.intakeemail_err}}</span>
                     <span ng-show="addlistForm.intakeemail.$invalid" class="help-block">Invalid Email</span>
                   </div>
                 </div>
@@ -215,9 +220,11 @@
                     <label for="cpwd">Intake Phone</label>
                   </div>
                   <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input placeholder="Intake Phone" id="intakephone" name="intakephone" class="form-control required" ng-minlength="10" ng-maxlength="10" ng-pattern="/^-?[0-9+]*$/" type="text" ng-model="$ctrl.intakephone">
-                    <span id="intakephone_err"> </span> 
+                    <input placeholder="Intake Phone" id="intakephone" name="intakephone" class="form-control required" ng-minlength="10" ng-maxlength="10" maxlength="10" ng-pattern="/^-?[0-9+]*$/" type="text" ng-model="$ctrl.intakephone">
+                    <span id="intakephone_err"> </span>
                     <span ng-show="addlistForm.intakephone.$invalid" class="help-block">Phone number must be 10 digits long</span>
+                    <!-- <input id="intakephone1" onclick="alert(this.value)" type="text" name="intakephone1" value="(___)-___-____" ng-model="$ctrl.intakephone1" pattern="^(\s+)?\(?(17|25|29|33|44)\)?(\s+)?[0-9]{3}-?[0-9]{2}-?[0-9]{2}$" > -->
+
                   </div>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
@@ -227,7 +234,7 @@
                   <div class="col-md-8 col-sm-8 col-xs-12">
                     <select ng-change="$ctrl.getCities()" name="state" ng-model="$ctrl.state" required="true">
                       <option value="">Select State</option>
-                      <option  ng-repeat="states in $ctrl.states track by $index" value="{{states}}">{{states}}</option>
+                      <option ng-repeat="states in $ctrl.states track by $index" value="{{states}}">{{states}}</option>
                     </select>
                     <span ng-show="addlistForm.state.$invalid">Required</span>
                   </div>
@@ -275,9 +282,8 @@
                   </div>
                 </div>
                 <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
-                  <input class="btn btn-primary modal_btn btn_size pull-left" value="Submit" id="submit" type="button" ng-click="$ctrl.submit(addlistForm)" ng-disabled = "addlistForm.zip.$dirty && addlistForm.zip.$invalid || addlistForm.intakephone.$dirty && addlistForm.intakephone.$invalid || addlistForm.user_phone.$dirty && addlistForm.user_phone.$invalid || ( addlistForm.password.$invalid) || addlistForm.email.$invalid || addlistForm.city.$error.required || addlistForm.state.$error.required || addlistForm.center_name.$error.required">
-                  <span style="color:green;" ng-show="success_msg">Added
-                  </span>
+                  <input class="btn btn-primary modal_btn btn_size pull-left" value="Submit" id="submit" type="button" ng-click="$ctrl.submit(addlistForm)" ng-disabled="addlistForm.zip.$dirty && addlistForm.zip.$invalid || addlistForm.intakephone.$dirty && addlistForm.intakephone.$invalid || addlistForm.user_phone.$dirty && addlistForm.user_phone.$invalid || ( addlistForm.password.$invalid) || addlistForm.email.$invalid || addlistForm.city.$error.required || addlistForm.state.$error.required || addlistForm.center_name.$error.required || addlistForm.user_last_name.$error.required || addlistForm.user_first_name.$error.required || addlistForm.user_company.$error.required || addlistForm.user_phone.$error.required || addlistForm.intakeemail.$error.required">
+                  <span style="color:green;" ng-show="success_msg">Added</span>
                 </div>
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub">
                   <div class="company_adds"></div>
