--- a/app/bannerAds/edit/main/view.html
+++ b/app/bannerAds/edit/main/view.html
@@ -11,15 +11,14 @@
           <!-- bg_add_treat -->
           <div class="col-md-12 col-xs-12 col-sm-12 padding_0">
             <a href="javascript:history.go(-1);">
-            <span class="modal_btn btn btn-primary margin_bottom_15_add pull-right  text-right">
-            <i class="glyphicon glyphicon-hand-left"></i>
-            Back
-            </span>
+              <span class="modal_btn btn btn-primary margin_bottom_15_add pull-right  text-right">
+                <i class="glyphicon glyphicon-hand-left"></i> Back
+              </span>
             </a>
           </div>
         </div>
         <div class="row">
-          <form name="advertisementEditForm"  enctype="multipart/form-data">
+          <form name="advertisementEditForm" enctype="multipart/form-data">
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
               <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
                 <div class="col-md-4 col-sm-4 col-xs-12">
@@ -57,11 +56,12 @@
                   <label for="cpwd">Center Web Link</label>
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12">
-                  <input name="center_web_link" ng-model="$ctrl.center_web_link" class="form-control" placeholder="Center Web Link" />
+                  <input name="center_web_link" ng-model="$ctrl.center_web_link" class="form-control" placeholder="Center Web Link" type="text" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+[a-z]{3,6}$/" />
+                  <span ng-show="advertisementEditForm.center_web_link.$error.pattern" class="help-block">Invalid Format (Correct format: www.google.com)</span>
                 </div>
               </div>
               <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
-                <input class="btn btn-primary modal_btn btn_size pull-right" value="Submit" id="submit" type="button" ng-click="$ctrl.submit()" ng-disabled ="advertisementForm.position.$invalid" >
+                <input class="btn btn-primary modal_btn btn_size pull-right" value="Submit" id="submit" type="button" ng-click="$ctrl.submit()" ng-disabled="advertisementEditForm.position.$invalid || advertisementEditForm.center_web_link.$invalid">
                 <span ng-show="$ctrl.success_msg" class="pull-left" style="color:green;">Updated</span>
               </div>
               <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub">
@@ -76,7 +76,9 @@
     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
       <div class="company_adds margin_top_25">
         <div class="company_adds">
-          <a href="http://www.monarchshores.com"><img class="img-responsive" src="uploads/advertisement_images/medium/1428518360-MonarchAN.jpg"></a>
+          <a href="http://www.monarchshores.com">
+            <img class="img-responsive" src="uploads/advertisement_images/medium/1428518360-MonarchAN.jpg">
+          </a>
         </div>
       </div>
     </div>
