--- a/app/bannerAds/list/main/view.html
+++ b/app/bannerAds/list/main/view.html
@@ -10,13 +10,14 @@
         <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 pull-right ">
           <!-- bg_add_treat -->
           <div class="col-md-12 col-xs-12 col-sm-12 padding_0">
-            <a href="/#/banner-ads-add"> <span class="pull-right modal_btn btn btn-primary margin_bottom_15_add text-right">Add Banner Ad
-            </span> 
-            </a>                                  
+            <a href="/#/banner-ads-add">
+              <span class="pull-right modal_btn btn btn-primary margin_bottom_15_add text-right">Add Banner Ad
+              </span>
+            </a>
           </div>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12" style="min-height:500px;">
-          <div id="no-more-tables" >
+          <div id="no-more-tables">
             <table class="col-md-12 col-xs-12 col-sm-12  table-striped table-condensed cf padding_0">
               <thead class="cf">
                 <tr>
@@ -34,7 +35,7 @@
                   <td data-title="Image" class="block_make">
                     <div class="img_outer_in_tb">
                       <div class="img_inner_in_tb">
-                        <img class="" src="{{list.content}}" style="height:70px">                                                               
+                        <img class="" src="{{list.content}}" style="height:70px">
                       </div>
                     </div>
                   </td>
@@ -42,8 +43,9 @@
                     <a href="/#/banner-ads-view/{{list.id}}" data-toggle="tooltip" data-placement="bottom" title="View"><i class="glyphicon glyphicon-eye-open"></i></a>
                     <a href="/#/banner-ads-edit/{{list.id}}" data-toggle="tooltip" data-placement="bottom" title="Edit"><i class="glyphicon glyphicon-edit"></i></a>
                     <!--<a href="javascript:;" data-toggle="tooltip" data-placement="bottom" ng-click="$ctrl.actDect(list.id)" ><i class="" ng-show="list.active">Deactivate</i><i class="" ng-show="(list.active==false)">Activate</i></a>-->
-                    <a id="status-{{list.id}}" href="javascript:;" data-toggle="tooltip" data-placement="bottom" ng-click="$ctrl.actDect(list.id)" ><i class="" ng-show="list.active">Deactivate</i><i class="" ng-show="(list.active==false)">Activate</i></a>
+                    <a id="status-{{list.id}}" href="javascript:;" data-toggle="tooltip" data-placement="bottom" ng-click="$ctrl.actDect(list.id)"><i class="" ng-show="list.active">Deactivate</i><i class="" ng-show="(list.active==false)">Activate</i></a>
                     <!-- <span ng-show="$ctrl.status.show">{{$ctrl.status.msg}}</span></td>-->
+                  </td>
                 </tr>
               </tbody>
             </table>
@@ -54,7 +56,9 @@
     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
       <div class="company_adds margin_top_25">
         <div class="company_adds">
-          <a href="http://www.monarchshores.com"><img class="img-responsive" src="uploads/advertisement_images/medium/1428518360-MonarchAN.jpg"></a>
+          <a href="http://www.monarchshores.com">
+            <img class="img-responsive" src="uploads/advertisement_images/medium/1428518360-MonarchAN.jpg">
+          </a>
         </div>
       </div>
     </div>
