--- a/app/sponsorAds/edit/main/view.html
+++ b/app/sponsorAds/edit/main/view.html
@@ -11,59 +11,58 @@
           <!-- bg_add_treat -->
           <div class="col-md-12 col-xs-12 col-sm-12 padding_0">
             <a href="javascript:history.go(-1);">
-            <span class="modal_btn btn btn-primary margin_bottom_15_add pull-right  text-right">
-            <i class="glyphicon glyphicon-hand-left"></i>
-            Back
-            </span>
+              <span class="modal_btn btn btn-primary margin_bottom_15_add pull-right  text-right">
+                <i class="glyphicon glyphicon-hand-left"></i> Back
+              </span>
             </a>
           </div>
         </div>
         <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12">
-          <p> You are free to add your own image and text and place them on any sponsored page on Addiction Network.  This allows you to choose pages that related highly to the services you provide, as well as zero in on specific locations in the United States.</p>
+          <p> You are free to add your own image and text and place them on any sponsored page on Addiction Network. This allows you to choose pages that related highly to the services you provide, as well as zero in on specific locations in the United States.</p>
         </div>
-        <form id="sponsor_ad" class="form-horizontal">
+        <form id="sponsor_ad" name="sponsorAdsEdit" class="form-horizontal">
           <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
             <div class="col-md-4 col-sm-4 col-xs-12">
-              <label for="tname"> Title: </label> 																										
+              <label for="tname"> Title: </label>
             </div>
             <div class="col-md-8 col-sm-8 col-xs-12">
-              <input name="title" class="form-control required" id="tname" placeholder="Sponsor Ad Title" type="text" value="{{$ctrl.title}}" ng-model="$ctrl.title"> 																										
+              <input name="title" class="form-control required" id="tname" placeholder="Sponsor Ad Title" type="text" value="{{$ctrl.title}}" ng-model="$ctrl.title">
             </div>
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
             <div class="col-md-4 col-sm-4 col-xs-12">
-              <label for="tname"> Name: </label> 																										
+              <label for="tname"> Name: </label>
             </div>
             <div class="col-md-8 col-sm-8 col-xs-12">
-              <input name="name" class="form-control required" id="tname" placeholder="Sponsor Ad Name" value="{{$ctrl.name}}" type="text" ng-model="$ctrl.name"> 																										
+              <input name="name" class="form-control required" placeholder="Sponsor Ad Name" value="{{$ctrl.name}}" type="text" ng-model="$ctrl.name">
             </div>
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
             <div class="col-md-4 col-sm-4 col-xs-12">
-              <label for="img_upload"> Upload Image:</label> 																										
+              <label for="img_upload"> Upload Image:</label>
             </div>
             <div class="col-md-8 col-sm-8 col-xs-12">
-              <div class=""> 
-                <a href="javascript:void(0)">																											
-                <input file-model="$ctrl.image" type="file" name="image" id="image" class="center_image" />
-                </a>	
-                <span>Please upload an image with exact size of 308*180 pixel. </span>	
+              <div class="">
+                <a href="javascript:void(0)">
+                  <input file-model="$ctrl.image" type="file" name="image" id="image" class="center_image" />
+                </a>
+                <span>Please upload an image with exact size of 308*180 pixel. </span>
               </div>
             </div>
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
             <div class="col-md-4 col-sm-4 col-xs-12">
-              <label for="description">  </label> 																										
+              <label for="description"> </label>
             </div>
             <div class="col-md-8 col-sm-8 col-xs-12">
-              <div class=""> 
-                <img class="" src="{{$ctrl.image}}">
+              <div class="">
+                <img class="" src="{{$ctrl.image}}" style="max-width:300px;">
               </div>
             </div>
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
             <div class="col-md-4 col-sm-4 col-xs-12">
-              <label for="description"> Description: </label> 																										
+              <label for="description"> Description: </label>
             </div>
             <div class="col-md-8 col-sm-8 col-xs-12">
               <textarea maxlength="255" name="sponsor_ad_descriptiion" rows="3" class="form-control required" id="description" placeholder="" ng-model="$ctrl.description">{{$ctrl.description}}</textarea>
@@ -71,18 +70,19 @@
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
             <div class="col-md-4 col-sm-4 col-xs-12">
-              <label for="web_link"> Website URL: </label> 																										
+              <label for="web_link"> Website URL: </label>
             </div>
             <div class="col-md-8 col-sm-8 col-xs-12">
-              <input name="sponsor_ad_website" class="form-control required url" id="sponsor_web_link" placeholder="http://www.google.com" value="{{$ctrl.website}}" ng-model="$ctrl.website" type="text">
+              <input name="sponsor_ad_website" class="form-control required url" type="text" id="sponsor_web_link" placeholder="http://www.google.com" ng-model="$ctrl.website" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+[a-z]{3,6}$/">
+              <span ng-show="sponsorAdsEdit.sponsor_ad_website.$error.pattern" class="help-block">Invalid Format(Correct format: www.google.com)</span>
             </div>
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
             <div class="col-md-4 col-sm-4 col-xs-12">
-              <label for="tname"> Sponsor Ads: </label> 																										
+              <label for="tname"> Sponsor Ads: </label>
             </div>
             <div class="col-md-8 col-sm-8 col-xs-12">
-              <select name="$ctrl.sponsored_listing_layout_ids[]" ng-model="$ctrl.sponsored_listing_layout_ids" id="sposnor_ad_cat" class="required multiselect" multiple="multiple" title="Select (Price in $)" >
+              <select name="$ctrl.sponsored_listing_layout_ids[]" ng-model="$ctrl.sponsored_listing_layout_ids" id="sposnor_ad_cat" class="required multiselect" multiple="multiple" title="Select (Price in $)">
                 <optgroup>
                   <option ng-repeat="normal in $ctrl.sponsored_ad_select_normal" value="{{normal.id}}">{{normal.name}}</option>
                 </optgroup>
@@ -94,14 +94,14 @@
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12  main_wrap_form_inner_sub pading_0">
             <div class="col-md-4 col-sm-4 col-xs-12">
-              <label for="web_link"> Payment Amount: </label> 																										
+              <label for="web_link"> Payment Amount: </label>
             </div>
             <div class="col-md-8 col-sm-8 col-xs-12">
               <input disabled="" name="paidamount" class="form-control" value="{{$ctrl.payment_amount}}" id="paidamount" type="text">
             </div>
           </div>
           <div class="text-left col-md-8 col-sm-12 col-xs-8 col-lg-8 col-md-offset-4 col-lg-offset-4 col-sm-offset-4 main_wrap_form_inner_sub">
-            <input class="btn btn-primary modal_btn pull-right btn_size" id="pay_sponsor_ad" value="Review" type="button" ng-click="$ctrl.submit();">
+            <input class="btn btn-primary modal_btn pull-right btn_size" id="pay_sponsor_ad" value="Review" type="button" ng-disabled="sponsorAdsEdit.sponsor_ad_website.$invalid" ng-click="$ctrl.submit();">
             <span ng-show="$ctrl.success_msg" style="color:green;">Updated</span>
           </div>
         </form>
@@ -110,7 +110,9 @@
     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
       <div class="company_adds margin_top_25">
         <div class="company_adds">
-          <a href="http://www.monarchshores.com"><img class="img-responsive" src="uploads/advertisement_images/medium/1428518360-MonarchAN.jpg"></a>
+          <a href="http://www.monarchshores.com">
+            <img class="img-responsive" src="uploads/advertisement_images/medium/1428518360-MonarchAN.jpg">
+          </a>
         </div>
       </div>
     </div>
