--- a/app/myProfile/profileMain/view.html
+++ b/app/myProfile/profileMain/view.html
@@ -8,8 +8,7 @@
   </div>
   <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
     <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 pull-right ">
-      <a href="#/add-treatment-center/">
-        <!-- bg_add_treat -->
+      <a ui-sref="myProfile.addTreatmentCenter">
         <div class="col-md-12 col-xs-12 col-sm-12 padding_0">
           <span class="pull-right modal_btn btn btn-primary margin_bottom_15_add  text-right">
             Add Treatment Center
