--- a/app/index.html
+++ b/app/index.html
@@ -407,6 +407,7 @@
     </script>
     <div class="email_pass_error"></div>
 
+    <status-view></status-view>
     <!-- Middle Content-->
     <div class="middle_content_div">
       <ui-view></ui-view>
