--- a/app/index.html
+++ b/app/index.html
@@ -408,7 +408,7 @@
     <div class="email_pass_error"></div>
 
     <!-- Middle Content-->
-    <div class="middle_content_div">
+    <div class="middle_content_div" ng-controller="advertisementCtrl">
       <ui-view></ui-view>
     </div>
     <!-- End Middle Content-->
