--- a/app/bannerAds/edit/main/view.html
+++ b/app/bannerAds/edit/main/view.html
@@ -56,7 +56,7 @@
                   <label for="cpwd">Center Web Link</label>
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12">
-                  <input name="center_web_link" ng-model="$ctrl.center_web_link" class="form-control" placeholder="Center Web Link" type="text" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+[a-z]{3,6}$/" />
+                  <input name="center_web_link" ng-model="$ctrl.center_web_link" class="form-control" placeholder="Center Web Link" type="text" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+[a-z]{2}$/" />
                   <span ng-show="advertisementEditForm.center_web_link.$error.pattern" class="help-block">Invalid Format (Correct format: www.google.com)</span>
                 </div>
               </div>
@@ -76,9 +76,7 @@
     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
       <div class="company_adds margin_top_25">
         <div class="company_adds">
-          <a href="http://www.monarchshores.com">
-            <img class="img-responsive" src="uploads/advertisement_images/medium/1428518360-MonarchAN.jpg">
-          </a>
+          <img class="img-reponsive" id="footer_ad">
         </div>
       </div>
     </div>
