--- a/app/bannerAds/list/main/view.html
+++ b/app/bannerAds/list/main/view.html
@@ -56,9 +56,7 @@
     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
       <div class="company_adds margin_top_25">
         <div class="company_adds">
-          <a href="http://www.monarchshores.com">
-            <img class="img-responsive" src="uploads/advertisement_images/medium/1428518360-MonarchAN.jpg">
-          </a>
+          <img class="img-reponsive" id="footer_ad">
         </div>
       </div>
     </div>
