--- a/app/home/view.html
+++ b/app/home/view.html
@@ -9,9 +9,9 @@
           <featured-treatment-center listings="$ctrl.listings"></featured-treatment-center>
           <!-- Search By State Section -->
           <search-by-state></search-by-state>
-          <!-- <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-            <a href="#" ng-controller="AdvertisementCtrl"><img class="img-responsive" ng-src="{{ footer_adv_banner }}"></a>
-          </div> -->
+          <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+            <img class="img-responsive" id="footer_ad">
+          </div>
         </div>
       </div>
     </div>
