--- a/app/sponsorAds/edit/main/view.html
+++ b/app/sponsorAds/edit/main/view.html
@@ -73,7 +73,7 @@
               <label for="web_link"> Website URL: </label>
             </div>
             <div class="col-md-8 col-sm-8 col-xs-12">
-              <input name="sponsor_ad_website" class="form-control required url" type="text" id="sponsor_web_link" placeholder="http://www.google.com" ng-model="$ctrl.website" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+[a-z]{3,6}$/">
+              <input name="sponsor_ad_website" class="form-control required url" type="text" id="sponsor_web_link" placeholder="http://www.google.com" ng-model="$ctrl.website" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+[a-z]{2}$/">
               <span ng-show="sponsorAdsEdit.sponsor_ad_website.$error.pattern" class="help-block">Invalid Format(Correct format: www.google.com)</span>
             </div>
           </div>
@@ -110,9 +110,7 @@
     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
       <div class="company_adds margin_top_25">
         <div class="company_adds">
-          <a href="http://www.monarchshores.com">
-            <img class="img-responsive" src="uploads/advertisement_images/medium/1428518360-MonarchAN.jpg">
-          </a>
+          <img class="img-reponsive" id="footer_ad">
         </div>
       </div>
     </div>
