--- a/app/header/view.html
+++ b/app/header/view.html
@@ -28,7 +28,7 @@
 <div class="navbar navbar-default header_bg_texture" role="navigation">
   <div class="container width_adjust_header ">
     <div class="navbar-header  padding_left_new ">
-      <a class="hdr_logo_div" href="http://www.addictionnetwork.com">
+      <a class="hdr_logo_div" href="/">
         <img class="img-responsive" src="themes/addiction/images/addiction_logo.png" />
       </a>
       <button type="button" class="navbar-toggle toggle_button" data-toggle="collapse" data-target=".navbar-collapse">
