--- a/app/index.html
+++ b/app/index.html
@@ -138,7 +138,7 @@
     <link rel=" stylesheet" id=" mappress-css" href=" plugins/mappress-google-maps-for-wordpress/css/mappress.css?ver=2.43.10" type=" text/css" media=" all" />
     <link rel=" stylesheet" id=" twentyfourteen-lato-css" href=" //fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C900%2C300italic%2C400italic%2C700italic" type=" text/css" media=" all" />
     <link rel=" stylesheet" id=" genericons-css" href=" themes/addiction/genericons/genericons.css?ver=3.0.2" type=" text/css" media=" all" />
-    <link rel=" stylesheet" id=" tthemes/addiction/js/jquery.jswentyfourteen-style-css" href=" themes/addiction/style.css?ver=4.6.3" type=" text/css" media=" all" />
+    <!-- <link rel=" stylesheet" id=" tthemes/addiction/js/jquery.jswentyfourteen-style-css" href=" themes/addiction/style.css?ver=4.6.3" type=" text/css" media=" all" /> -->
     <!--[if lt IE 9]> <link rel=" stylesheet" id=" twentyfourteen-ie-css" href=" themes/addiction/css/ie.css?ver=20131205" type=" text/css" media=" all" /> <![endif]-->
     <script src=" js/jquery/jquery.js?ver=1.12.4"></script>
     <script src="js/jquery/jquery-migrate.min.js?ver=1.4.1"></script>
@@ -398,9 +398,6 @@
       $('document').ready(function () {
         setTimeout(function () {
           $(".email_pass_error").hide();
-        }, 5000);
-        setTimeout(function () {
-          $(".profileUpdated").hide();
         }, 5000);
         $('#login').validate();
       })
