fixed failed build

--- a/app/treatmentCenterDetail/view.html
+++ b/app/treatmentCenterDetail/view.html
@@ -38,7 +38,7 @@
                   <label>Website Link:</label>
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12 treatment_detail">
-                  <a href="{{ $ctrl.entry.website_link }}">{{ $ctrl.entry.center_web_link }}</a>
+                  <a ng-href="{{ $ctrl.entry.center_web_link }}" target="_blank">{{ $ctrl.entry.center_web_link }}</a>
                 </div>
               </div>
               <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
