--- a/app/treatmentCenterDetail/reviewFormBox/view.html
+++ b/app/treatmentCenterDetail/reviewFormBox/view.html
@@ -1,9 +1,9 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 main_wrap_form_inner_sub padding_0 review-form-box">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 submit-review">
     <button class="btn btn-primary modal_btn btn_size" type="Button" ng-click="$ctrl.showAndHideInput()">Submit Review</button>
   </div>
 
-  <div ng-show="!$ctrl.hidden" class="col-md-12 col-sm-12 col-xs-12 col-lg-12 show-hide">
+  <div ng-show="!$ctrl.hidden" class="col-md-12 col-sm-12 col-xs-12 col-lg-12 review-form">
     <form ng-submit="$ctrl.submit()" novalidate="novalidate" __bizdiag="1806558906" __biza="WJ__">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 padding_0">
         <h4 class="sub_heading_under_sign_up">Review and Rating :</h4>
