Fixed treatment center link on treatment centers page

--- a/app/treatmentCenterMap/view.html
+++ b/app/treatmentCenterMap/view.html
@@ -149,7 +149,7 @@
           <div class="col-sm-6 col-xs-12 col-md-6 col-lg-6" ng-repeat="listing in search_by_filter">
             <div class="listing_wrap">
               <div class="img_under_block_outer">
-                <a ng-href="#/treatment_center/{{listing.id}}/detail">
+                <a ng-href="#/treatment-center-detail/{{listing.id}}">
                   <img class="" ng-src="{{ listing.listing_image}}"> </a>
               </div>
               <div class="head_under_block">
