Added footer ad inTreatment center

--- a/app/myProfile/changePassword/view.html
+++ b/app/myProfile/changePassword/view.html
@@ -45,6 +45,13 @@
         <input type="submit" name="changePassword" class="btn btn-primary modal_btn btn_size" value="Submit" />
       </div>
     </form>
+    <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+      <div class="company_adds margin_top_25">
+        <div class="company_adds">
+          <img class="img-reponsive" id="footer_ad">
+        </div>
+      </div>
+    </div>
   </div>
   <!-- Content End -->
 
