Added multiselect in sponsor and banner ads

--- a/app/bannerAds/add/main/view.html
+++ b/app/bannerAds/add/main/view.html
@@ -11,7 +11,6 @@
 
       <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
         <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 pull-right ">
-
           <!-- bg_add_treat -->
           <div class="col-md-12 col-xs-12 col-sm-12 padding_0">
             <a href="javascript:history.go(-1);">
@@ -55,7 +54,8 @@
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12">
                   <!--  <input name="image" id="image" class="span2 text_file center_image" ng-model="$ctrl.image" type="file"> -->
-                  <input file-model="$ctrl.content" type="file" name="content" id="content" class="center_image" />
+                  <input file-model="$ctrl.content" type="file" name="content" id="content" class="center_image" accept="image/*" />
+                  <span ng-show="$ctrl.err_type">Please upload an image only. </span>
                 </div>
               </div>
 
@@ -64,7 +64,7 @@
                   <label for="cpwd">Center Web Link</label>
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12">
-                  <input name="center_web_link" ng-model="$ctrl.center_web_link" class="form-control" type="text" placeholder="Center Web Link" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+[a-z]{2}$/" />
+                  <input name="center_web_link" ng-model="$ctrl.center_web_link" class="form-control" type="text" placeholder="Center Web Link" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+[a-z]{2,10}$/" />
                   <span ng-show="advertisementForm.center_web_link.$error.pattern" class="help-block">Invalid Format(Correct format: www.google.com)</span>
                 </div>
               </div>
