--- a/app/bannerAds/list/main/view.html
+++ b/app/bannerAds/list/main/view.html
@@ -10,7 +10,7 @@
         <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 pull-right ">
           <!-- bg_add_treat -->
           <div class="col-md-12 col-xs-12 col-sm-12 padding_0">
-            <a href="/#/banner-ads-add">
+            <a href="/#/my-profile/banner-ads-add">
               <span class="pull-right modal_btn btn btn-primary margin_bottom_15_add text-right">Add Banner Ad
               </span>
             </a>
@@ -40,8 +40,8 @@
                     </div>
                   </td>
                   <td data-title="Action">
-                    <a href="/#/banner-ads-view/{{list.id}}" data-toggle="tooltip" data-placement="bottom" title="View"><i class="glyphicon glyphicon-eye-open"></i></a>
-                    <a href="/#/banner-ads-edit/{{list.id}}" data-toggle="tooltip" data-placement="bottom" title="Edit"><i class="glyphicon glyphicon-edit"></i></a>
+                    <a href="/#/my-profile/banner-ads-view/{{list.id}}" data-toggle="tooltip" data-placement="bottom" title="View"><i class="glyphicon glyphicon-eye-open"></i></a>
+                    <a href="/#/my-profile/banner-ads-edit/{{list.id}}" data-toggle="tooltip" data-placement="bottom" title="Edit"><i class="glyphicon glyphicon-edit"></i></a>
                     <!--<a href="javascript:;" data-toggle="tooltip" data-placement="bottom" ng-click="$ctrl.actDect(list.id)" ><i class="" ng-show="list.active">Deactivate</i><i class="" ng-show="(list.active==false)">Activate</i></a>-->
                     <a id="status-{{list.id}}" href="javascript:;" data-toggle="tooltip" data-placement="bottom" ng-click="$ctrl.actDect(list.id)"><i class="" ng-show="list.active">Deactivate</i><i class="" ng-show="(list.active==false)">Activate</i></a>
                     <!-- <span ng-show="$ctrl.status.show">{{$ctrl.status.msg}}</span></td>-->
