Added confirmation popup in delete treatment center

--- a/app/sponsorAds/edit/view.html
+++ b/app/sponsorAds/edit/view.html
@@ -4,7 +4,11 @@
   <div class="row" ng-controller="SponsorAdsCtrl as $ctrl">
     <!-- Left Section  -->
     <profile-nav-section></profile-nav-section>
-
+    <div class="right_content cont_right">
+      <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 ">
+        <img class="img-responsive" id="sidebar_ad">
+      </div>
+    </div>
     <!-- Right Section  -->
     <sponsor-ads-edit-main></sponsor-ads-edit-main>
   </div>
