--- a/app/sponsorAds/edit/main/view.html
+++ b/app/sponsorAds/edit/main/view.html
@@ -56,7 +56,7 @@
             </div>
             <div class="col-md-8 col-sm-8 col-xs-12">
               <div class="">
-                <img id="sponsor_image" ng-src="{{$ctrl.image}}" style="max-width:300px;" alt="Image">
+                <img id="sponsor_image" ng-src="{{$ctrl.image}}" style="max-width:300px;max-height:100px;" alt="Image">
               </div>
             </div>
           </div>
@@ -101,10 +101,10 @@
         </form>
       </div>
     </div>
-    <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 ">
+    <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
       <div class="company_adds margin_top_25 ">
         <div class="company_adds ">
-          <img class="img-reponsive " id="footer_ad ">
+          <img class="img-reponsive " id="footer_ad">
         </div>
       </div>
     </div>
