--- a/app/sponsorAds/view.html
+++ b/app/sponsorAds/view.html
@@ -1,11 +1,15 @@
 <div class="container">
-  
+
   <div class="" style="display: none;"></div>
-  <div class="row"  >
+  <div class="row">
     <!-- Left Section  -->
     <profile-nav-section></profile-nav-section>
-
+    <div class="right_content cont_right">
+      <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 ">
+        <img class="img-responsive" id="sidebar_ad">
+      </div>
+    </div>
     <!-- Right Section  -->
-    <banner-ads-list ></banner-ads-list>
+    <banner-ads-list></banner-ads-list>
   </div>
 </div>
