fixed the query string issue in treatment center map page

--- a/app/myProfile/editTreatmentCenter/view.html
+++ b/app/myProfile/editTreatmentCenter/view.html
@@ -79,7 +79,7 @@
           <label for="state">Select State:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12 class_for_select">
-          <state-select on-update="$ctrl.onStateUpdate(selected)"></state-select>
+          <state-select selected="$ctrl.state" on-update="$ctrl.onStateUpdate(selected)"></state-select>
         </div>
       </div>
 
