--- a/app/sponsorHome/view.html
+++ b/app/sponsorHome/view.html
@@ -37,7 +37,11 @@
             </h1>
             <p>{{ $ctrl.entry.content_2 }}</p>
           </div>
-
+          <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub">
+            <div class="company_adds">
+              <img class="img-reponsive" id="footer_ad">
+            </div>
+          </div>
         </div>
       </div>
     </div>
