Added footer ad in treatment center map page

--- a/app/treatmentCenterMap/centerListBox/view.html
+++ b/app/treatmentCenterMap/centerListBox/view.html
@@ -26,6 +26,9 @@
           <div class="detail_div_under_block"><a ng-href="#/treatment-center-detail/{{listing.id}}">More Details</a> </div>
         </div>
       </div>
+      <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+        <img class="img-responsive" id="footer_ad">
+      </div>
     </div>
   </div>
 </div>
