feature(#60): added cities section

--- a/app/home/view.html
+++ b/app/home/view.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-sm-8 col-md-8 col-xs-12">
-      <div class="left_content left_align">
+      <div class="left_content">
         <!-- Welcome Section -->
         <welcome></welcome>
         <div class="row">
