--- a/app/sidePanel/sideCard/view.html
+++ b/app/sidePanel/sideCard/view.html
@@ -1,11 +1,11 @@
 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
-  <div class="right_content cont_right">
+  <div class="right_content">
     <h2>
-      <label>{{ $ctrl.type }}</label>
+      <label>{{ $ctrl.filter }}</label>
     </h2>
     <ul class="list-unstyled">
       <li ng-repeat="listing in $ctrl.listings">
-        <a ui-sref="{{ listing.uiSref }}">
+        <a href ng-click="$ctrl.nagivateTo(listing)">
           <span class="glyphicon glyphicon-chevron-right"></span>
           {{ listing.name }}
         </a>
