added a new page for all cities of a state

--- a/app/home/searchByState/view.html
+++ b/app/home/searchByState/view.html
@@ -1,8 +1,6 @@
 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-  <h1 class="listing_content">
-    <label>
-      Search By State
-    </label>
+  <h1 class="section-heading">
+    <label>Search By State</label>
   </h1>
 </div>
 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
