--- a/app/home/welcome/view.html
+++ b/app/home/welcome/view.html
@@ -1,8 +1,8 @@
-<h1>
+<h1 class="section-heading">
   <label>Welcome</label>
 </h1>
 <p></p>
-<h1>How to Find a Rehab Center</h1>
+<h1 class="sub-section-heading">How to Find a Rehab Center</h1>
 <p>Addiction Network is an entirely free, comprehensive service designed to assist anyone seeking substance abuse and addiction treatment for themselves, or a loved one, the find the best rehab available. Our services are here to assist in providing every level of care and every different type of facility available in the industry. The site was designed to address the growing need to make addiction treatment options available to anyone. With so many people in America struggling with addiction, alcoholism, and substance abuse, the founders of Addiction Network noticed that it was extremely difficult for the average person to easily access the various treatment options that are out there. This makes finding a rehab that works, for your specific needs, very difficult.
 </p>
 <p>
