--- a/app/sponsorHome/view.html
+++ b/app/sponsorHome/view.html
@@ -1,8 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-sm-8 col-md-8 col-xs-12">
-      <sponsor-listing-box entry="$ctrl.entry"></sponsor-listing-box>
-      <city-listing-box></city-listing-box>
+      <ui-view></ui-view>
     </div>
     <side-panel></side-panel>
   </div>
