--- a/app/home/featuredTreatmentCenter/view.html
+++ b/app/home/featuredTreatmentCenter/view.html
@@ -1,5 +1,5 @@
 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-  <h1 class="listing_content">
+  <h1 class="section-heading">
     <label>Featured Treatment Center</label>
   </h1>
 </div>
