--- a/app/sidePanel/viewCitiesCard/view.html
+++ b/app/sidePanel/viewCitiesCard/view.html
@@ -1,12 +1,12 @@
 <div ng-show="$ctrl.display" class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
   <div class="right_content">
-    <h2>
+    <h2 class="right-section-heading">
       <label>Filter</label>
     </h2>
     <p>Cities</p>
     <ul class="list-unstyled">
       <li>
-        <a href ng-click="$ctrl.scrollToCities()">View All Cities</a>
+        <a href ng-click="$ctrl.viewAllCities()">View All Cities</a>
       </li>
     </ul>
   </div>
