--- a/app/sponsorHome/sponsorListingBox/view.html
+++ b/app/sponsorHome/sponsorListingBox/view.html
@@ -1,5 +1,5 @@
 <div class="left_content left_align">
-  <h1>
+  <h1 class="section-heading">
     <label>{{ $ctrl.entry.heading_1 }}</label>
   </h1>
   <p>{{ $ctrl.entry.content_1 }}</p>
@@ -29,7 +29,7 @@
 
     <!-- Second section of the listing-->
     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-      <h1 class="listing_content">
+      <h1 class="section-heading">
         <label>{{ $ctrl.entry.heading_2 }}</label>
       </h1>
       <p>{{ $ctrl.entry.content_2 }}</p>
