added view counties link in the side panel

--- a/app/sidePanel/view.html
+++ b/app/sidePanel/view.html
@@ -7,7 +7,7 @@
       </div>
     </div>
   </div>
-  <view-cities-card></view-cities-card>
+  <location-filter-card></location-filter-card>
   <side-card type="Demographic"></side-card>
   <side-card type="Treatment Approach"></side-card>
   <side-card type="Setting"></side-card>
