--- a/app/sponsorHome/sponsorListingBox/view.html
+++ b/app/sponsorHome/sponsorListingBox/view.html
@@ -1,46 +1,52 @@
 <div class="left_content left_align">
-  <h1 class="section-heading">
-    <label>{{ $ctrl.entry.heading_1 }}</label>
-  </h1>
-  <p>{{ $ctrl.entry.content_1 }}</p>
-  <div class="row">
-    <!-- First section of the listing -->
-    <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 sponsor_div">
-      <ul class="width-100">
-        <li ng-repeat="listing in $ctrl.entry.listings" class="width-100">
-          <div class="col-lg-12 col-md-12 col-sm-12">
-            <div class="sponsor_img">
-              <a ng-href="{{ listing.center_web_link | urlFilter }}" class="thumbnail" target="_blank">
-                <img ng-src="{{ listing.listing_image }}" alt="" />
-              </a>
-            </div>
-            <div class="sponsor_img" style="width:65%;">
-              <h3>
-                <a ng-href="{{ listing.center_web_link | urlFilter }}" target="_blank">
-                  {{ listing.center_name }}
+  <div ng-show="$ctrl.displayError" class="sponsor-listing-error">
+    <p class="sponsor-listing-error-text">Oops! We are currently unable to provide any listings at this area. Sorry for any inconvenience.</p>
+  </div>
+  <div ng-hide="$ctrl.displayError" class="sponsor-listing">
+    <h1 class="section-heading">
+      <label>{{ $ctrl.entry.heading_1 }}</label>
+    </h1>
+    <p>{{ $ctrl.entry.content_1 }}</p>
+
+    <div class="row">
+      <!-- First section of the listing -->
+      <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 sponsor_div">
+        <ul class="width-100">
+          <li ng-repeat="listing in $ctrl.entry.listings" class="width-100">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+              <div class="sponsor_img">
+                <a ng-href="{{ listing.center_web_link | urlFilter }}" class="thumbnail" target="_blank">
+                  <img ng-src="{{ listing.listing_image }}" alt="" />
                 </a>
-              </h3>
-              <p>{{ listing.description }}</p>
+              </div>
+              <div class="sponsor_img" style="width:65%;">
+                <h3>
+                  <a ng-href="{{ listing.center_web_link | urlFilter }}" target="_blank">
+                    {{ listing.center_name }}
+                  </a>
+                </h3>
+                <p>{{ listing.description }}</p>
+              </div>
             </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-
-    <!-- Second section of the listing-->
-    <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-      <h1 class="section-heading">
-        <label>{{ $ctrl.entry.heading_2 }}</label>
-      </h1>
-      <p>{{ $ctrl.entry.content_2 }}</p>
-    </div>
-
-    <!-- footer ad -->
-    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub">
-      <div class="company_adds">
-        <img class="img-reponsive" id="footer_ad">
+          </li>
+        </ul>
       </div>
-    </div>
 
+      <!-- Second section of the listing-->
+      <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+        <h1 class="section-heading">
+          <label>{{ $ctrl.entry.heading_2 }}</label>
+        </h1>
+        <p>{{ $ctrl.entry.content_2 }}</p>
+      </div>
+
+      <!-- footer ad -->
+      <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub">
+        <div class="company_adds">
+          <img class="img-reponsive" id="footer_ad">
+        </div>
+      </div>
+
+    </div>
   </div>
 </div>
