fixed minor ui distortion on locationFilterCard

--- a/app/sidePanel/locationFilterCard/view.html
+++ b/app/sidePanel/locationFilterCard/view.html
@@ -3,9 +3,9 @@
     <h2 class="right-section-heading">
       <label>Filter</label>
     </h2>
-    <ol class="breadcrumb">
+    <ol class="breadcrumb location-filter-ol">
       <li class="breadcrumb-item"><a href ng-click="$ctrl.goToState()">{{ $ctrl.stateName }}</a></li>
-      <li class="breadcrumb-item active">City</li>
+      <!-- <li class="breadcrumb-item active">{{ $ctrl.area }}</li> -->
     </ol>
     <ul class="list-unstyled">
       <li>
