--- a/app/sponsorHome/view.html
+++ b/app/sponsorHome/view.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-sm-8 col-md-8 col-xs-12">
-      <ui-view autoScroll="true"></ui-view>
+      <ui-view autoscroll="true"></ui-view>
     </div>
     <side-panel></side-panel>
   </div>
